--- a/pages/custom.css
+++ b/pages/custom.css
@@ -378,7 +378,7 @@ footer {
 } */
 
 
-.ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-item, .ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-submenu {
+/* .ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-item, .ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-submenu {
 
   padding: 0 12px;
-}
+} */
