--- a/pages/responsive.css
+++ b/pages/responsive.css
@@ -129,6 +129,7 @@
     width: 15% !important;
     max-width: 15% !important;
     min-width: 15% !important;
+    margin-left: -30px;
     margin-top:50%;
     position: fixed;
   }
