--- a/pages/custom.css
+++ b/pages/custom.css
@@ -399,6 +399,10 @@ footer {
 .ant-menu-horizontal > .ant-menu-item a {
   color: black;
 }
+.banner_button a{
+  color: white;
+
+}
 /* .ant-avatar-string {
   left: 65%;
 } */
