--- a/pages/custom.css
+++ b/pages/custom.css
@@ -29,7 +29,7 @@
   background: #95d5d2;
   height: 70px;
   /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
-  /* box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19); */
+
 
 }
 .ant-menu {
@@ -400,6 +400,10 @@ footer {
   color: black;
 }
 .banner_button a{
+  color: black;
+
+}
+.banner_button .worker_btn:hover a{
   color: white;
 
 }
