--- a/pages/custom.css
+++ b/pages/custom.css
@@ -400,19 +400,16 @@ footer {
   color: black;
 }
 .banner_button a{
-  color: black;
-
-}
-.banner_button .worker_btn:hover a{
   color: white;
 
 }
+
 /* .ant-avatar-string {
   left: 65%;
 } */
 
 
-/* .ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-item, .ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-submenu {
+.ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-item, .ant-menu-horizontal:not(.ant-menu-dark)>.ant-menu-submenu {
 
   padding: 0 12px;
-} */
+}
