--- a/pages/responsive.css
+++ b/pages/responsive.css
@@ -139,7 +139,8 @@
     /* font-weight: bold; */
   }
   .banner_button button:hover{
-    background-color: darkblue !important;
+    color:#000000;
+   
     border: 1px solid white;
   }
   .sidebar-layout-background-mobile {
@@ -156,6 +157,11 @@
     margin-top: 50%;
     position: fixed;
   }
+  .footer_social_icon {
+    
+    margin-bottom: 15px;
+  
+}
   footer {
     position: relative;
     margin-top: 15%;
@@ -169,7 +175,7 @@
   .slider_pic h1 {
     color: black;
     margin-left: 40px;
-    margin-top: 18vh;
+    margin-top: 1vh;
     font-size: xx-large;
   }
   .slider_pic {
@@ -178,7 +184,17 @@
     height: 100vh;
   }
   .banner_button {
-    margin-top: 15vh;
+    margin-top: 20vh;
+  }
+  .banner_button button {
+    border-radius: 100px;
+    width: 150px;
+    height: 50px;
+    font-Size: 20px;
+    box-shadow: 0px 3px 10px rgb(0 0 0 / 50%);
+    /* border: 1px solid #ffffff; */
+    color:#000000;
+    /* font-weight: bold; */
   }
   /* .site-layout {
     margin: 16px 30px !important;
